# duriansat

./: CMakeLists.txt  LICENSE  README.md
core/: Main.cc  Solver.cc  Solver.h
mtl/: template.mk
simp/: Main.cc  Makefile  SimpSolver.cc
utils/: check_drat.py  sort_drat.py  terminal.cc  terminal.h
